--- a/extension-manifest-v3/src/_locales/ja/messages.json
+++ b/extension-manifest-v3/src/_locales/ja/messages.json
@@ -1,7 +1,15 @@
 {
-  "@_0__detected": {
-    "message": "$${0}が検出されました",
-    "description": "Number of trackers detected by Ghostery"
+  "@_0__left": {
+    "message": "$${0} left"
+  },
+  "1_day": {
+    "message": "1 day"
+  },
+  "1_hour": {
+    "message": "1 hour"
+  },
+  "about": {
+    "message": "バージョン情報"
   },
   "accept_terms": {
     "message": "条件を受け入れる"
@@ -17,14 +25,17 @@
   },
   "adult_advertising": {
     "message": "アダルト広告",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "advertising": {
     "message": "広告",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "all_popups": {
     "message": "すべてのポップアップ"
+  },
+  "always": {
+    "message": "Always"
   },
   "anti_tracking": {
     "message": "追跡防止"
@@ -35,18 +46,21 @@
   "apply_optimal_privacy_settings_": {
     "message": "最適なプライバシー設定を適用:"
   },
-  "are_you_sure_": {
-    "message": "本当に行いますか？"
+  "are_you_sure__you_want_to_disable_tracker_previews_": {
+    "message": "Are you sure, you want to disable tracker previews?"
   },
   "are_you_sure_you_want_to_skip_enabling_ghostery_": {
     "message": "本当にGhosteryを有効にしなくてもいいのですか？"
   },
   "audio_video_player": {
     "message": "オーディオ/ビデオ・プレーヤー",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "back": {
     "message": "戻る"
+  },
+  "become_a_contributor": {
+    "message": "Become a contributor"
   },
   "blocked": {
     "message": "ブロックされた対象"
@@ -59,31 +73,46 @@
   },
   "cdn": {
     "message": "CDN",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "check_out__a_href__@_0___target___blank__faqs__a__or_drop_us_a_line_at__a_href__mailto___1_____2___a____br___we_ll_be_more_than_happy_to_talk_to_you_": {
     "message": "<a href=\"$${0}\" target=\"_blank\">FAQs</a> を確認するか、<a href=\"mailto:$${1}\">$${2}</a>までお問い合わせください。 <br/> ぜひ、ご相談ください。"
   },
+  "clear_all": {
+    "message": "Clear all"
+  },
   "comments": {
     "message": "コメント",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "consent_management": {
     "message": "同意の管理",
-    "description": "Includes trackers used for cookie consent management, allowing websites different levels of tracking user activity."
+    "description": "Tracker category name - includes trackers used for cookie consent management, allowing websites different levels of tracking user activity"
+  },
+  "contact": {
+    "message": "Contact"
+  },
+  "contact_support": {
+    "message": "Contact support"
   },
   "continue": {
     "message": "継続"
   },
   "customer_interaction": {
     "message": "顧客インタラクション",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "detailed_view": {
     "message": "詳細ビュー"
   },
+  "disable": {
+    "message": "Disable"
+  },
   "disable_trackers_preview": {
     "message": "トラッカーの無効化プレビュー"
+  },
+  "disabled": {
+    "message": "Disabled"
   },
   "done": {
     "message": "完了"
@@ -93,7 +122,7 @@
   },
   "email": {
     "message": "メール",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "enable_ghostery": {
     "message": "Ghosteryを有効にする"
@@ -104,13 +133,16 @@
   "enable_never_consent_": {
     "message": "決して同意しないを有効化しますか?"
   },
+  "enabled": {
+    "message": "有効になっています"
+  },
   "essential": {
     "message": "必需",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "extensions": {
     "message": "拡張機能",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "for_more_information_read_our_full": {
     "message": "詳細はこちらをご覧ください"
@@ -121,21 +153,39 @@
   "ghostery_enabled": {
     "message": "Ghosteryが有効化"
   },
+  "ghostery_has_been_resumed_on_this_site_": {
+    "message": "Ghostery has been resumed on this site."
+  },
+  "ghostery_has_nothing_to_do_on_this_page": {
+    "message": "Ghostery has nothing to do on this page"
+  },
+  "ghostery_is_paused_on_this_site_": {
+    "message": "Ghostery is paused on this site."
+  },
   "ghostery_is_set_up_to_stop_trackers_in_their_tracks_and_protect_your_privacy_while_browsing_": {
     "message": "Ghosteryは、トラッカーを足止めし、ブラウジング中のプライバシーを保護するように設定されています!"
   },
   "ghostery_is_stopping_trackers_in_their_tracks_and_preventing_you_from_being_profiled_and_your_personal_information_sold_to_data_brokers_": {
     "message": "Ghosteryはトラッカーの追跡を止め、あなたがプロファイリングされ、あなたの個人情報がデータブローカーに売られることを防いでいます。"
   },
-  "ghostery_options": {
-    "message": "Ghosteryのオプション"
-  },
   "ghostery_privacy_policy": {
     "message": "Ghosteryプライバシー・ポリシー"
   },
+  "ghostery_settings": {
+    "message": "Ghostery settings"
+  },
+  "ghostery_will_be_paused_on_this_site__you_can_change_this_at_any_time_in_ghostery_settings_to_stop_trackers_and_ads_from_tracking_you_around_the_web": {
+    "message": "Ghostery will be paused on this site. You can change this at any time in Ghostery Settings to stop trackers and ads from tracking you around the web"
+  },
+  "ghostery_will_be_paused_on_this_site_for_1_day": {
+    "message": "Ghostery will be paused on this site for 1 day"
+  },
+  "ghostery_will_be_paused_on_this_site_for_1_hour": {
+    "message": "Ghostery will be paused on this site for 1 hour"
+  },
   "hosting": {
     "message": "ホスティング",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "i_agree_to_send_non_personal_information_to__a_href__@_0___ghostery_s_whotracks_me__a___and_i_accept_the__a_href____1___ghostery_privacy_policy__a_": {
     "message": "<a href=\"$${0}\">Ghostery’s WhoTracks.Me</a>に個人情報以外の情報を送信することに同意し、<a href=\"$${1}\">GhosteryのPrivacy Policy</a><a href=\"$${0}\">WhoTracks.Me</a> を承諾します。"
@@ -149,18 +199,33 @@
   "let_ghostery_be_your_complete_privacy_advocate_and_reject_all_popups_and_tracking_for_you__or_do_it_yourself_": {
     "message": "Ghosteryをプライバシーの完璧な守護者にして、ポップアップやお客様の追跡を全て拒否するか、ご自身で手動設定しましょう!"
   },
-  "manifest_name": {
+  "manage_website_settings": {
+    "message": "Manage website settings"
+  },
+  "manage_your_privacy_protection": {
+    "message": "Manage your privacy protection"
+  },
+	"manifest_name": {
     "message": "Ghostery – プライバシー広告ブロッカー"
   },
   "manifest_short_description": {
     "message": "Ghosteryは強力なプライバシー拡張機能です。広告をブロックし、トラッカーを阻止し、ウェブサイトを高速化します。"
   },
+  "menu": {
+    "message": "Menu"
+  },
+  "mind_that_not_all_listed_entities_are_trackers__that_is_not_all_of_them_collect_personal_data": {
+    "message": "Mind that not all listed entities are trackers, that is not all of them collect personal data"
+  },
   "miscellaneous": {
     "message": "さまざまな",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "more_information_on_@_0__methodology_in_ghostery_s_manifesto_": {
     "message": "$${0}の方法論の詳細については、Ghostery's Manifestoに記載されています。"
+  },
+  "my_account": {
+    "message": "アカウント"
   },
   "never_consent": {
     "message": "決して同意しない"
@@ -173,6 +238,12 @@
   },
   "no": {
     "message": "いいえ"
+  },
+  "no_trackers_detected": {
+    "message": "No trackers detected"
+  },
+  "no_websites_added": {
+    "message": "No websites added"
   },
   "off": {
     "message": "オフ"
@@ -192,37 +263,59 @@
   "on_this_website": {
     "message": "このウェブサイトに対して"
   },
-  "page_load_": {
-    "message": "ページのロード"
+  "paused": {
+    "message": "Paused"
+  },
+  "permission_required": {
+    "message": "Permission required"
   },
   "privacy_policy": {
     "message": "プライバシー・ポリシー"
   },
+  "privacy_policy___panel_company": {
+    "message": "Privacy policy"
+  },
+  "privacy_protection": {
+    "message": "Privacy protection"
+  },
+  "read_more_on_whotracks_me": {
+    "message": "Read more on WhoTracks.me"
+  },
   "report_a_broken_page": {
     "message": "区切られたページを報告"
   },
-  "show_tracker_wheel_in_the_browser_toolbar": {
-    "message": "Show Tracker Wheel in the browser toolbar"
+  "resume": {
+    "message": "再開"
   },
-  "show_trackers_preview_next_to_search_results": {
-    "message": "検索結果の隣にトラッカーのプレビューを表示する"
+  "search_website___": {
+    "message": "Search website..."
+  },
+  "settings": {
+    "message": "settings"
+  },
+  "sign_in": {
+    "message": "サインイン"
+  },
+  "simple_view": {
+    "message": "シンプル・ビュー"
   },
   "site_analytics": {
     "message": "サイト分析",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "skip": {
     "message": "スキップ"
   },
   "social_media": {
     "message": "ソーシャル・メディア",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
-  },
-  "statistical_report": {
-    "message": "統計レポート"
+    "description": "Tracker category name"
   },
   "submit_a_new_tracker": {
     "message": "新しいトラッカーを提出"
+  },
+  "telemetry": {
+    "message": "テレメトリー",
+    "description": "Tracker category name"
   },
   "the_ghostery_browser_extension_is_installed_in_your_browser_but_ghosty_is_taking_a_light_nap_": {
     "message": "Ghostery Browser Extensionはブラウザにインストールされていますが、Ghostyは休止中です。"
@@ -230,11 +323,17 @@
   "tired_of_cookie_popups_": {
     "message": "クッキーのポップアップにうんざりですか?"
   },
-  "tracker_details": {
-    "message": "トラッカーの詳細"
-  },
   "trackers": {
     "message": "トラッカー"
+  },
+  "trackers__@_0_": {
+    "message": "trackers: $${0}"
+  },
+  "trackers_count": {
+    "message": "Trackers Count"
+  },
+  "trackers_detected": {
+    "message": "Trackers detected"
   },
   "trackers_detected_by_ghostery_on_this_website__nbsp_@_0_": {
     "message": "このウェブサイト上でGhosteryがトラッカーを検出:&nbsp;$${0}"
@@ -242,15 +341,27 @@
   "trackers_preview": {
     "message": "トラッカーのプレビュー"
   },
+  "trackers_wheel": {
+    "message": "Trackers Wheel"
+  },
+  "try_to_open_this_panel_on_a_different_browser_tab": {
+    "message": "Try to open this panel on a different browser tab"
+  },
   "unblocked": {
     "message": "ブロックされていない対象"
   },
   "unknown": {
     "message": "未知",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
-  "user_interface": {
-    "message": "ユーザーインターフェース"
+  "website": {
+    "message": "Website"
+  },
+  "website__@_0__": {
+    "message": "Website ($${0})"
+  },
+  "websites": {
+    "message": "Websites"
   },
   "welcome_to_ghostery": {
     "message": "Ghosteryをご利用いただきありがとうございます"
@@ -258,8 +369,17 @@
   "what_is_whotracks_me_": {
     "message": "WhoTracks.Meとは何か？"
   },
+  "whotracks_me": {
+    "message": "WhoTracks.Me"
+  },
   "whotracks_me__operated_by_ghostery__is_an_integral_part_of_ghostery_s_ai_anti_tracking_technology__it_is_a_comprehensive_global_resource_on_trackers__bringing_transparency_to_web_tracking_": {
     "message": "Ghosteryが運営するWhoTracks.Meは、GhosteryのAIアンチトラッキング技術に統合されている要素です。 トラッカーに関する最も包括的なグローバルリソースで、Webトラッキングに透明性をもたらしています。"
+  },
+  "whotracks_me_statistical_report": {
+    "message": "WhoTracks.Me Statistical Report"
+  },
+  "whotracks_me_wheel": {
+    "message": "WhoTracks.Me wheel"
   },
   "with_ghostery_enabled_you_instantly_browse_the_web_safer__faster_and_with_less_annoying_ads_": {
     "message": "Ghosteryを有効にすると、より安全に、より速く、そして迷惑な広告をより減らす形で、ウェブを瞬時にブラウズすることができます。"
@@ -278,5 +398,8 @@
   },
   "you_re_all_set__ghosterian_": {
     "message": "Ghosteryの仲間として、これで大丈夫です!"
+  },
+  "you_won_t_see_anymore_tracker_wheels_next_to_the_search_results_": {
+    "message": "You won’t see anymore tracker wheels next to the search results."
   }
 }
